--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,15 @@ knitr::opts_chunk$set(
 
 # 📌 Personas con Discapacidad en México  
 
-Este repositorio recopila y analiza información sobre la población con discapacidad en México a partir de diversas fuentes oficiales. Se incluyen datos de censos y encuestas nacionales que permiten caracterizar la situación de las personas con discapacidad en el país, con un enfoque en su distribución, condiciones de vida y acceso a servicios.  
+Este repositorio recopila y analiza información sobre la población con discapacidad en México a partir de diversas fuentes oficiales. Se incluyen datos de censos y encuestas nacionales que permiten caracterizar la situación de las personas con discapacidad en el país, con un enfoque en su distribución, condiciones de vida y acceso a servicios.   
+
+<div style="display: flex; justify-content: center; gap: 10px;">
+
+<img src="Output/Población con discapacidad_Page_3.png" width="50%" style="margin: 1px;">
+
+<img src="Output/Población con discapacidad_Page_4.png" width="45%" style="margin: 1px;">
+
+</div>
 
 ## Fuentes de Datos
 
@@ -45,3 +53,10 @@ La información presentada en este repositorio se basa en los siguientes instrum
 - Es fundamental considerar que las definiciones y metodologías utilizadas en cada encuesta pueden variar, lo que puede afectar la comparabilidad de los datos.
 - Es recomendable revisar la documentación oficial de cada encuesta para comprender a fondo el contexto y las limitaciones de los datos.
 
+## Resultados
+
+**Enlace**: https://dvillasanao.github.io/Discapacidad_Mexico/Output/Discapacidad-en-Mexico.html  
+
+## Código de Conducta
+
+Por favor, revisa nuestro [Código de Conducta](CODE_OF_CONDUCT.md) antes de contribuir.
