--- a/R/Discapacidad en Mexico.Rmd
+++ b/R/Discapacidad en Mexico.Rmd
@@ -319,44 +319,6 @@ p
 #ggexport(p, filename = path ,width = 9, height = 7, device = "cairo")
 ```
 
-```{r, eval = FALSE, class.source = "fold-hide"}
-tabla <- data %>% 
-          filter(Sexo %nin% "Total" & `Grupos quinquenales`%nin% c("Total", "No especificado")) %>% 
-           mutate(percent_POBTOT = case_when(Sexo %in% "Hombres" ~ .$`Población Total` / Totales["Población Total",] * 100,
-                                             Sexo %in% "Mujeres" ~ .$`Población Total` / Totales["Población Total",] * 100)) %>%
-            mutate(percent = ifelse(Sexo %in% "Hombres", -1 * .$percent_POBTOT, .$percent_POBTOT))
-
-p <- tabla %>% 
-      arrange(`Grupos quinquenales`) |>
-      ggplot(aes(x = percent, 
-                 y = `Grupos quinquenales`,
-                 group = Sexo)) + 
-        geom_point(aes(color = Sexo, fill = Sexo), size = 2) + 
-         theme_bw() + 
-          theme(plot.title = element_text(size = 22, hjust = 0.15, family = "Montserrat", face = "bold"),
-                plot.subtitle = element_text(size = 18, hjust = 0, family = "Montserrat", face = "bold"),
-                plot.caption = element_text(size = 11, hjust = 0.2, vjust = 1, family = "Montserrat"), 
-                axis.text = element_text(family = "Montserrat"), 
-                axis.title = element_text(family = "Montserrat", size = 15), 
-                legend.key.size = unit(0.5, "cm"),
-                legend.text = element_text(size = 12, family = "Montserrat"), 
-                legend.title = element_text(size = 10, hjust = 0.5, family = "Montserrat", face = "bold"),
-                legend.position = "right"
-               ) + 
-           scale_fill_manual(values = c("#C70039", "#1d68d1")) + 
-            scale_color_manual(values = c("#C70039", "#1d68d1")) +
-             labs(title = "Piramide poblacional por grupo quinquenal",
-                  subtitle = "Población total",
-                  x = "Porcentaje de población",
-                  fill = "Sexo",
-                  color = "Sexo",
-                  caption = expression(paste("Fuente: INEGI. Censo de Población y Vivienda 2020. Tabulados del Cuestionario Básico")))
-  
-p
-
-#path = "Output/Piramide Población Total.pdf"
-#ggexport(p, filename = path ,width = 9, height = 7, device = "cairo")
-```
 
 ![](../Output/Piramide Población Total.png){width="90%" fig-align="center"}
 
@@ -371,7 +333,8 @@ require(tidyverse)
 require(tibble)
 require(viridis)
 
-paleta <- colorRampPalette(pals::kovesi.linear_blue_5_95_c73(2))(2)
+paleta <- colorRampPalette(pals::kovesi.linear_blue_5_95_c73(2))(2) 
+paleta <- c("#99C156", "#803488")
 
 tabla <- data %>% 
           filter(Sexo %nin% "Total" & `Grupos quinquenales`%nin% c("Total", "No especificado")) %>% 
@@ -424,14 +387,70 @@ p
 
 ### Población con discapacidad, con limitación en la actividad cotidiana o con algún problema o condición mental 
 
-![](../Output/Población con discapacidad_Page_3.png){width="90%" fig-align="center"}
+![](../Output/Población con discapacidad_Page_3.png){width="90%" fig-align="center"}    
 
-![](../Output/Población con discapacidad_Page_4.png){width="75%" fig-align="center"}
+**Elaboración propia**    
 
-3 La suma de las actividades cotidianas puede ser mayor al total por aquellas personas que tienen más de una discapacidad.
-4 La suma de las actividades cotidianas puede ser mayor al total por aquellas personas que tienen más de una limitación.
+![](../Output/Población con discapacidad_Page_4.png){width="75%" fig-align="center"}   
+**Elaboración propia**
+La suma de las actividades cotidianas puede ser mayor al total por aquellas personas que tienen más de una discapacidad.
 
+### Población con discapacidad
 
+```{r, eval = FALSE, class.source = "fold-hide"}
+require(ggplot2)
+require(ggpubr)
+require(Hmisc)
+require(tidyverse)
+require(tibble)
+require(viridis)
+
+paleta <- colorRampPalette(pals::kovesi.linear_blue_5_95_c73(2))(2) 
+paleta <- c("#373C88", "#803488")
+
+tabla <- data %>% 
+          filter(Sexo %nin% "Total" & `Grupos quinquenales`%nin% c("Total", "No especificado")) %>% 
+           mutate(percent_POBTOT = case_when(Sexo %in% "Hombres" ~ .$`Con discapacidad (Total)`/ Totales["Con discapacidad (Total)",] * 100,
+                                             Sexo %in% "Mujeres" ~ .$`Con discapacidad (Total)`/ Totales["Con discapacidad (Total)",] * 100)) %>%
+            mutate(percent = ifelse(Sexo %in% "Hombres", -1 * .$percent_POBTOT, .$percent_POBTOT))
+
+p <- tabla %>% 
+      ggplot(aes(x = percent,
+                 y = `Grupos quinquenales`)) + 
+       geom_col(aes(color = Sexo, fill = Sexo)) + 
+        geom_smooth(color = "black", method = "loess", se = FALSE, show.legend = FALSE, size = 2) +
+        geom_label(aes(x = ifelse(percent < 0, percent -0.5, percent + 0.5),
+                   label = round(abs(percent), 2)),
+                   fill = "white",
+                   alpha = 0.5, 
+                   family = "Montserrat",
+                   label.size = 0) + 
+         theme_bw() + 
+          theme(plot.title = element_text(size = 22, hjust = 0.15, family = "Montserrat", face = "bold"),
+                plot.subtitle = element_text(size = 18, hjust = 0, family = "Montserrat", face = "bold"),
+                plot.caption = element_text(size = 11, hjust = 0.2, vjust = 1, family = "Montserrat"), 
+                axis.text = element_text(family = "Montserrat"), 
+                axis.title = element_text(family = "Montserrat", size = 15), 
+                legend.key.size = unit(0.5, "cm"),
+                legend.text = element_text(size = 12, family = "Montserrat"), 
+                legend.title = element_text(size = 10, hjust = 0.5, family = "Montserrat", face = "bold"),
+                legend.position = "right"
+               ) + 
+           scale_fill_manual(values = paleta) + 
+            scale_color_manual(values = paleta) +
+             labs(title = "Piramide poblacional por grupo quinquenal",
+                  subtitle = stringr::str_wrap("Población con discapacidad", 50),
+                  x = "Porcentaje de población",
+                  fill = "Sexo",
+                  color = "Sexo",
+                  caption = expression(paste("Fuente: INEGI. Censo de Población y Vivienda 2020. Tabulados del Cuestionario Básico")))
+  
+p
+
+#path = "Output/Piramide Población con discapacidad.pdf"
+#ggexport(p, filename = path ,width = 9, height = 7, device = "cairo")
+```
+![](../Output/Piramide Población con discapacidad.png){width="90%" fig-align="center"} 
 
 ## Referencias  
 
